# lexilla-py

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  wheels.yml
docs/: auditing.md  bindings.md  build.md  documenting.md  index.md  testpypi.md
docs/examples/: index.md
docs/specs/: README.md  mission.md  roadmap.md
examples/: README.md
examples/pyside6_scintilla_cpp_lexer/: README.md  main.py
src/lexilla/: __init__.py  _languages.py  _lexilla.pyi  pyside6_scintilla.py
src/lexilla/bindings/: CMakeLists.txt  _binding.cpp
src/lexilla_core/: CMakeLists.txt
src/lexilla_vendor/: README.md
tests/: test_lexilla.py  test_pyside6_scintilla.py  test_smoke.py
tools/: check_docs_sync.py  generate_language_enums.py
