[build-system]
requires = [
    "scikit-build-core>=0.10",
    "nanobind>=2.4",
]
build-backend = "scikit_build_core.build"


[project]
name = "lexilla"
dynamic = ["version"]
description = "Permissively-licensed Python bindings for Lexilla, the lexer library for Scintilla"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ioan Calin", email = "iborco@gmail.com" },
]
keywords = [
    "scintilla",
    "lexilla",
    "lexer",
    "syntax-highlighting",
    "nanobind",
    "code-editor",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors",
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://borco.github.io/lexilla-py/"
Repository = "https://github.com/borco/lexilla-py"
Issues = "https://github.com/borco/lexilla-py/issues"


[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/lexilla"]

# Dev-only example apps; not part of the published sdist/wheel.
sdist.exclude = ["examples"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/lexilla/__init__.py"


[dependency-groups]
dev = [
    "cmake>=3.25",
    "ninja",
    "nanobind>=2.4",
    "pyright>=1.1.410",
    "pyside6-scintilla>=5.6",
    "pytest>=8.0",
    "ruff>=0.8",
    "scikit-build-core>=0.10",
]
docs = [
    "markdown-callouts>=0.4",
    "mkdocs>=1.6",
    "mkdocs-exclude>=1.0",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]


# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]


# ---------------------------------------------------------------------------
# pyright — type-checks the public API surface (src/lexilla) and the tests
# against it.
# ---------------------------------------------------------------------------

[tool.pyright]
include = ["src/lexilla/__init__.py", "tests"]
venvPath = "."
venv = ".venv"


# ---------------------------------------------------------------------------
# cibuildwheel — wheel builds. No Qt/external SDK dependency (unlike
# pyside6-scintilla), so no before-all SDK install or repair-wheel excludes
# are needed -- the default delocate/auditwheel/delvewheel behavior is fine.
# ---------------------------------------------------------------------------

[tool.cibuildwheel]
build = "cp31{1,2,3,4}-win_amd64 cp31{1,2,3,4}-manylinux_x86_64 cp31{1,2,3,4}-manylinux_aarch64 cp31{1,2,3,4}-macosx_arm64 cp31{1,2,3,4}-macosx_x86_64"
test-requires = ["pytest>=8.0"]
test-command = "pytest {project}/tests"

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]


# ---------------------------------------------------------------------------
# ruff (optional linting — remove if not wanted)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py311"
# src/lexilla_vendor: vendored upstream source, kept byte-identical to the release tarball (once vendored).
# src/lexilla/_lexilla.pyi: generated by `make stubs`, not hand-edited or ruff-formatted.
# src/lexilla/_languages.py: generated by `make generate-language-enums`, not hand-edited.
extend-exclude = ["src/lexilla_vendor", "src/lexilla/_lexilla.pyi", "src/lexilla/_languages.py"]
