[build-system]
requires = [
    "scikit-build-core>=0.10",
    "nanobind>=2.4",
]
build-backend = "scikit_build_core.build"


[project]
name = "lexilla"
dynamic = ["version"]
description = "Permissively-licensed Python bindings for Lexilla, the lexer library for Scintilla"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ioan Calin", email = "iborco@gmail.com" },
]
keywords = [
    "scintilla",
    "lexilla",
    "lexer",
    "syntax-highlighting",
    "nanobind",
    "code-editor",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors",
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://borco.github.io/lexilla-py/"
Repository = "https://github.com/borco/lexilla-py"
Issues = "https://github.com/borco/lexilla-py/issues"


[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/lexilla"]

# Dev-only example apps; not part of the published sdist/wheel.
sdist.exclude = ["examples"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/lexilla/__init__.py"


[dependency-groups]
dev = [
    "cmake>=3.25",
    "ninja",
    "nanobind>=2.4",
    "pyright>=1.1.410",
    "pyside6-scintilla>=5.6",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.8",
    "scikit-build-core>=0.10",
]
docs = [
    "markdown-callouts>=0.4",
    "mkdocs>=1.6",
    "mkdocs-exclude>=1.0",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]


# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]


# ---------------------------------------------------------------------------
# pyright — type-checks the public API surface (src/lexilla) and the tests
# against it.
# ---------------------------------------------------------------------------

[tool.pyright]
include = ["src/lexilla/__init__.py", "tests"]
venvPath = "."
venv = ".venv"


# ---------------------------------------------------------------------------
# cibuildwheel — wheel builds. No Qt/external SDK dependency for the build
# itself (unlike pyside6-scintilla), so no before-all SDK install or
# repair-wheel excludes are needed there -- the default
# delocate/auditwheel/delvewheel behavior is fine. The *test* step does pull
# in pyside6-scintilla + pytest-qt to exercise the pyside6_scintilla glue
# module, which needs QT_QPA_PLATFORM=offscreen for headless Qt widget
# creation (same as pyside6-scintilla's own CI).
# ---------------------------------------------------------------------------

[tool.cibuildwheel]
build = "cp31{1,2,3,4}-win_amd64 cp31{1,2,3,4}-manylinux_x86_64 cp31{1,2,3,4}-manylinux_aarch64 cp31{1,2,3,4}-macosx_arm64 cp31{1,2,3,4}-macosx_x86_64"
test-requires = ["pytest>=8.0", "pytest-qt>=4.4", "pyside6-scintilla>=5.6"]
test-environment = { QT_QPA_PLATFORM = "offscreen" }
test-command = "pytest {project}/tests"
# pyside6-scintilla has no aarch64 wheel yet (borco/pyside6-scintilla#4), so
# the wheel still builds for manylinux_aarch64, but testing it is skipped.
test-skip = "*-manylinux_aarch64"

[tool.cibuildwheel.linux]
# manylinux_2_34 matches pyside6-scintilla's own published wheel tag
# (manylinux_2_34_x86_64) -- the default manylinux_2_28 image's older glibc
# makes that wheel look incompatible to pip, so `pip install
# pyside6-scintilla` (test-requires above) falls back to building it from
# sdist, which needs a not-yet-released PySide6 build dependency and fails.
manylinux-x86_64-image = "manylinux_2_34"
# manylinux images are missing the system Qt6Gui runtime libs needed to load
# even the offscreen platform plugin (same libs pyside6-scintilla's own CI
# installs via apt on Debian-based runners, here via dnf for the
# manylinux_2_34/AlmaLinux base image).
before-test = "dnf install -y mesa-libGL mesa-libEGL libxkbcommon || true"

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]
# cibuildwheel's x86_64 default (-mmacosx-version-min=10.9) is too old for
# nanobind's use of aligned operator delete, which needs macOS >=10.13.
# 11.0 also matches the arm64 build's own default, so both archs end up
# with the same deployment target.
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }


# ---------------------------------------------------------------------------
# ruff (optional linting — remove if not wanted)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py311"
# src/lexilla_vendor: vendored upstream source, kept byte-identical to the release tarball (once vendored).
# src/lexilla/_lexilla.pyi: generated by `make stubs`, not hand-edited or ruff-formatted.
# src/lexilla/_languages.py: generated by `make generate-language-enums`, not hand-edited.
extend-exclude = ["src/lexilla_vendor", "src/lexilla/_lexilla.pyi", "src/lexilla/_languages.py"]
